@@ -2,6 +2,7 @@
 v4.1.3-git
 ----------
 
+[jan] Gracefully deal with columns removed from the backend.
 
 
 ------
